Python Based Stock Price Tracker

--- a/stock_price.ipynb
+++ b/stock_price.ipynb
@@ -67,7 +67,7 @@
     "    # Plotting the closing prices\n",
     "    plt.figure(figsize=(10, 5))\n",
     "    plt.plot(history.index, history['Close'], label=\"Close Price\", color='blue')\n",
-    "    plt.title(f\"{ticker} Stock Price (Last 12 Months)\")\n",
+    "    plt.title(f\"{ticker} Stock Price ({timeframe})\")\n",
     "    plt.xlabel(\"Date\")\n",
     "    plt.ylabel(\"Price\")\n",
     "    plt.legend()\n",
